Fix word break in comments.
Fix word break in comments.

Closes #1098

--- a/packages/theme/styles/_layouts.scss
+++ b/packages/theme/styles/_layouts.scss
@@ -91,7 +91,7 @@ p:first-child { margin-block-start: 0; } // First and last padding
 p:last-child { margin-block-end: 0; }
 
 .p-inline {
-  word-break: break-all;
+  word-break: break-word;
   line-height: 150%;
 }
 
